syntax = "proto3";

package protobuf;

option java_package = 'com.github.srmocher.gazelle_kotlin.kotlinparser';
option java_multiple_files = true;
option java_outer_classname = "KotlinParserProto";

option go_package = 'github.com/srmocher/gazelle-kotlin/kotlin/protobuf';

import "google/rpc/status.proto";

message KotlinParserRequest {
    repeated string kotlin_source_file = 1;
}

message JavaParserRequest {
    repeated string java_source_file = 1;
}

message KotlinParserResponse {
    repeated SourceFileInfo source_file_infos = 1;
    google.rpc.Status error = 2;
}

message JavaParserResponse {
    repeated SourceFileInfo source_file_infos = 1;
    google.rpc.Status error = 2;
}

message SourceFileInfo {
    string file_name = 1;
    string package_name = 2;
    repeated string imports = 3;
}