syntax = "proto3";

package protobuf;

option java_package = 'com.github.srmocher.gazelle_kotlin.kotlinparser';
option java_multiple_files = true;

import "kotlin/protobuf/kotlin_parser.proto";

service KotlinParser {
    rpc ParseKotlinFiles(KotlinParserRequest) returns (KotlinParserResponse) {}
    rpc ParseJavaFiles(JavaParserRequest) returns (JavaParserResponse) {}
}